ui: name, nickname and photo added without formatting

--- a/index.html
+++ b/index.html
@@ -1,9 +1,17 @@
 <!DOCTYPE html>
 <html>
     <head>
-
+        <title>Nikolas</title>
     </head>
     <body>
+
+        <div>
+            <h1>Hello I am Nikolas Alcala</h1 id="name">
+            <h3>"Niko"</h3 id="nickname">
+        </div>
+        <div>
+            <img src="nikolas_alcala.jpg" id="profile_image">
+        </div>
         
     </body>
 </html>
