Chore: created div tags to separate content

--- a/index.html
+++ b/index.html
@@ -4,14 +4,17 @@
         <title>Nikolas</title>
     </head>
     <body>
-
-        <div>
-            <h1>Hello I am Nikolas Alcala</h1 id="name">
-            <h3>"Niko"</h3 id="nickname">
+        <div class="parent-box upper-half">
+            <div class="child-1-box left-box">
+                <h1>Hello I am Nikolas Alcala</h1 id="name">
+                <h3>"Niko"</h3 id="nickname">
+            </div>
+            <div class="child-1-box right-box">
+                <img src="nikolas_alcala.jpg" id="profile_image">
+            </div>
         </div>
-        <div>
-            <img src="nikolas_alcala.jpg" id="profile_image">
+        <div class="parent-box lower-half">
+            
         </div>
-        
     </body>
 </html>
