--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
     <head>
         <title>Nikolas</title>
     </head>
+    <link rel="stylesheet" href="exer01.css">
     <body>
         <div class="parent-box upper-half">
             <div class="child-1-box left-box">
-                <h1>Hello I am Nikolas Alcala</h1 id="name">
-                <h3>"Niko"</h3 id="nickname">
+                <h1 id="name">Hello I am Nikolas Alcala</h1>
+                <h3 id="nickname">"Niko"</h3>
             </div>
             <div class="child-1-box right-box">
                 <img src="nikolas_alcala.jpg" id="profile_image">
@@ -17,4 +18,5 @@
             
         </div>
     </body>
+    
 </html>
