feat: new content - favorites (no answers yet)

--- a/index.html
+++ b/index.html
@@ -15,6 +15,31 @@
             </div>
         </div>
         <div class="parent-box lower-half">
+            <div id="favorites-header">
+                <h2>favorites</h2>
+            </div>
+            <div id="favorites-body">
+                <div id="favorites-left-column">
+                    <div class="favorites-card">
+                        <h4 class="favorite-heading">CMSC subject</h4>
+                        <p></p>
+                    </div>
+                    <div class="favorites-card">
+                        <h4 class="favorite-heading">General Elective</h4>
+                        <p></p>
+                    </div>
+                </div>
+                <div id="favorites-right-column">
+                    <div class="favorites-card">
+                        <h4 class="favorite-heading">Programmming language</h4>
+                        <p></p>
+                    </div>
+                    <div class="favorites-card">
+                        <h4 class="favorite-heading">Food</h4>
+                        <p></p>
+                    </div>  
+                </div>
+            </div>
             
         </div>
     </body>
