feat: new content - favorites (with answers)

--- a/index.html
+++ b/index.html
@@ -20,23 +20,23 @@
             </div>
             <div id="favorites-body">
                 <div id="favorites-left-column">
-                    <div class="favorites-card">
+                    <div class="favorites-card">   
                         <h4 class="favorite-heading">CMSC subject</h4>
-                        <p></p>
+                        <p>CMSC 22 is my favorite CMSC subject because the course enabled me to create a prototype of my first game. I enjoyed creating the graphic elements and integrating them in the graphical user interface while designing the gaming experience.</p>
                     </div>
                     <div class="favorites-card">
-                        <h4 class="favorite-heading">General Elective</h4>
-                        <p></p>
+                        <h4 class="favorite-heading">Programming language</h4>
+                        <p>My favorite programming language is JavaScript because of its flexibility and closeness to English.</p>
                     </div>
                 </div>
                 <div id="favorites-right-column">
                     <div class="favorites-card">
-                        <h4 class="favorite-heading">Programmming language</h4>
-                        <p></p>
+                        <h4 class="favorite-heading">General Elective</h4>
+                        <p>Ethics 1 is my favorite GE course because I enjoyed learning about the different ethical perspectives. Since finishing the course, there have been multiple instances in life where I’ve seen these perspectives at play and I often meet these inquiries in my mind about how those ethical frameworks emerged and became integrated into the community.                        </p>
                     </div>
                     <div class="favorites-card">
                         <h4 class="favorite-heading">Food</h4>
-                        <p></p>
+                        <p>My favorite food specifically is the aburi maki with mayonnaise because of the amazing flavor and texture that melts in your mouth as it envelopes you in the right balance of flavors.</p>
                     </div>  
                 </div>
             </div>
