Feat: new content - answered hobbies and childhood dream

--- a/index.html
+++ b/index.html
@@ -7,11 +7,32 @@
     <body>
         <div class="parent-box upper-half">
             <div class="child-1-box left-box">
-                <h1 id="name">Hello I am Nikolas Alcala</h1>
-                <h3 id="nickname">"Niko"</h3>
+                    <h1 id="name">Hello I am Nikolas Alcala</h1>
+                    <h3 id="nickname">"Niko"</h3>
             </div>
             <div class="child-1-box right-box">
                 <img src="nikolas_alcala.jpg" id="profile_image">
+            </div>
+        </div>
+        <div class="parent-box interests">
+            <div>
+                <div>
+                    <span class="header">Hobbies</span>
+                </div>
+                <ul>
+                    <li>Project development</li>
+                    <li>Programming</li>
+                    <li>Reading quora articles</li>
+                    <li>Saving Pinterest pins</li>
+                </ul>
+            </div>
+            <div>
+                <div>
+                    <span class="header">Childhood dream</span>
+                </div>
+                <p>
+                    My childhood dream is to build something meaningful. This hasn’t changed since then but the image of it to me just became more clear: I want to develop a commercial platform that solves community problems. At present, I have a project that’s fueling my entrepreneurial spirit and keeps me motivated as I enjoy learning more about computer science and meaningful technologies.
+                </p>
             </div>
         </div>
         <div class="parent-box lower-half">
