from ID 'favorites-left-column' and 'favorites-left-column' to CLASS 'left-column' and 'left-column' in css

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
             </div>
         </div>
         <div class="parent-box interests">
-            <div>
-                <div>
+            <div class="left-column">
+                <div >
                     <span class="header">Hobbies</span>
                 </div>
                 <ul>
@@ -26,8 +26,8 @@
                     <li>Saving Pinterest pins</li>
                 </ul>
             </div>
-            <div>
-                <div>
+            <div class="right-column">
+                <div >
                     <span class="header">Childhood dream</span>
                 </div>
                 <p>
@@ -40,7 +40,7 @@
                 <h2>favorites</h2>
             </div>
             <div id="favorites-body">
-                <div id="favorites-left-column">
+                <div class="left-column">
                     <div class="favorites-card">   
                         <h4 class="favorite-heading">CMSC subject</h4>
                         <p>CMSC 22 is my favorite CMSC subject because the course enabled me to create a prototype of my first game. I enjoyed creating the graphic elements and integrating them in the graphical user interface while designing the gaming experience.</p>
@@ -50,7 +50,7 @@
                         <p>My favorite programming language is JavaScript because of its flexibility and closeness to English.</p>
                     </div>
                 </div>
-                <div id="favorites-right-column">
+                <div class="right-column">
                     <div class="favorites-card">
                         <h4 class="favorite-heading">General Elective</h4>
                         <p>Ethics 1 is my favorite GE course because I enjoyed learning about the different ethical perspectives. Since finishing the course, there have been multiple instances in life where I’ve seen these perspectives at play and I often meet these inquiries in my mind about how those ethical frameworks emerged and became integrated into the community.                        </p>
