ui: hobbies and childhood dream now in the same line

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
                 <img src="nikolas_alcala.jpg" id="profile_image">
             </div>
         </div>
-        <div class="parent-box interests">
+        <div class="parent-box interests flexbox">
             <div class="left-column">
-                <div >
+                <div>
                     <span class="header">Hobbies</span>
                 </div>
                 <ul>
@@ -39,7 +39,7 @@
             <div id="favorites-header">
                 <h2>favorites</h2>
             </div>
-            <div id="favorites-body">
+            <div class="flexbox">
                 <div class="left-column">
                     <div class="favorites-card">   
                         <h4 class="favorite-heading">CMSC subject</h4>
