chore: added a comma to the name statement

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <body>
         <div class="parent-box upper-half">
             <div class="child-1-box left-box">
-                <h1 id="name">Hello I am Nikolas Alcala</h1>
+                <h1 id="name">Hello, I am
+                    <br>Nikolas Alcala</h1>
                 <h3 id="nickname">"Niko"</h3>
             </div>
             <div class="child-1-box right-box">
