fix: added 'section-header' class to h2 for styling

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </div>
         <div class="parent-box lower-half">
             <div id="favorites-header">
-                <h2>favorites</h2>
+                <h2 class="section-header">FAVORITES</h2>
             </div>
             <div id="favorites-body">
                 <div id="favorites-left-column">
