ui: added accent elements

--- a/index.html
+++ b/index.html
@@ -7,36 +7,40 @@
     <body>
         <div class="parent-box upper-half">
             <div class="child-1-box left-box">
-                <h1 id="name">Hello, I am
-                    <br>Nikolas Alcala</h1>
-                <h3 id="nickname">"Niko"</h3>
+                <h1 id="name">Hello! I am
+                    <br>
+                    <span class="accent-text">
+                        Nikolas Alcala
+                    </span></h1>
+                <h3 id="nickname">"NIKO"</h3>
             </div>
             <div class="child-1-box right-box">
                 <img src="nikolas_alcala.jpg" id="profile_image">
+                <div class="circle" id="shape-cir-01"></div>
             </div>
         </div>
         <div class="parent-box lower-half">
             <div id="favorites-header">
-                <h2 class="section-header">FAVORITES</h2>
+                <h2 class="section-header ">FAVORITES</h2>
             </div>
             <div id="favorites-body">
                 <div id="favorites-left-column">
                     <div class="favorites-card">   
-                        <h4 class="favorite-heading">CMSC subject</h4>
+                        <h4 class="favorite-heading accent-text">CMSC subject</h4>
                         <p>CMSC 22 is my favorite CMSC subject because the course enabled me to create a prototype of my first game. I enjoyed creating the graphic elements and integrating them in the graphical user interface while designing the gaming experience.</p>
                     </div>
                     <div class="favorites-card">
-                        <h4 class="favorite-heading">Programming language</h4>
+                        <h4 class="favorite-heading accent-text">Programming language</h4>
                         <p>My favorite programming language is JavaScript because of its flexibility and closeness to English.</p>
                     </div>
                 </div>
                 <div id="favorites-right-column">
-                    <div class="favorites-card">
-                        <h4 class="favorite-heading">General Elective</h4>
+                    <div class="favorites-card ">
+                        <h4 class="favorite-heading accent-text">General Elective</h4>
                         <p>Ethics 1 is my favorite GE course because I enjoyed learning about the different ethical perspectives. Since finishing the course, there have been multiple instances in life where I’ve seen these perspectives at play and I often meet these inquiries in my mind about how those ethical frameworks emerged and became integrated into the community.                        </p>
                     </div>
                     <div class="favorites-card">
-                        <h4 class="favorite-heading">Food</h4>
+                        <h4 class="favorite-heading accent-text">Food</h4>
                         <p>My favorite food specifically is the aburi maki with mayonnaise because of the amazing flavor and texture that melts in your mouth as it envelopes you in the right balance of flavors.</p>
                     </div>  
                 </div>
