docs: Added documentation to stamp different layout sections

--- a/index.html
+++ b/index.html
@@ -1,3 +1,12 @@
+<!--
+    KARL NIKOLAS ALCALA
+    2021-10557
+
+    Exercise 01
+    February 19, 2023
+    CMSC-100 UV4L
+-->
+
 <!DOCTYPE html>
 <html>
     <head>
@@ -5,7 +14,10 @@
     </head>
     <link rel="stylesheet" href="exer01.css">
     <body>
+        <!--INTRODUCTION (FIRST THING SEEN)-->
+
         <div class="parent-box upper-half">
+            <!--NAME ON THE LEFT-->
             <div class="child-1-box left-box">
                 <h1 id="name">Hello! I am
                     <br>
@@ -14,38 +26,25 @@
                     </span></h1>
                 <h3 id="nickname">"NIKO"</h3>
             </div>
+            <!--PHOTO ON THE RIGHT-->
             <div class="child-1-box right-box">
                 <img src="nikolas_alcala.jpg" id="profile_image">
                 <div class="circle" id="shape-cir-01"></div>
             </div>
         </div>
-        <div class="parent-box interests flexbox">
-            <div class="left-column">
-                <div>
-                    <span class="header">Hobbies</span>
-                </div>
-                <ul>
-                    <li>Project development</li>
-                    <li>Programming</li>
-                    <li>Reading quora articles</li>
-                    <li>Saving Pinterest pins</li>
-                </ul>
-            </div>
-            <div class="right-column">
-                <div >
-                    <span class="header">Childhood dream</span>
-                </div>
-                <p>
-                    My childhood dream is to build something meaningful. This hasn’t changed since then but the image of it to me just became more clear: I want to develop a commercial platform that solves community problems. At present, I have a project that’s fueling my entrepreneurial spirit and keeps me motivated as I enjoy learning more about computer science and meaningful technologies.
-                </p>
-            </div>
-        </div>
+
+
+        <!--FAVORITE THINGS-->
+
         <div class="parent-box lower-half">
+            <!--SECTION HEADER-->
             <div id="favorites-header">
                 <h2 class="section-header ">FAVORITES</h2>
             </div>
-            <div class="flexbox">
-                <div class="left-column">
+
+            <!--4 FAVORITE STUFF-->
+            <div id="favorites-body">
+                <div id="favorites-left-column">
                     <div class="favorites-card">   
                         <h4 class="favorite-heading accent-text">CMSC subject</h4>
                         <p>CMSC 22 is my favorite CMSC subject because the course enabled me to create a prototype of my first game. I enjoyed creating the graphic elements and integrating them in the graphical user interface while designing the gaming experience.</p>
